unpackaged/main/default/objects/Sales_Period__c/Sales_Period__c.object-meta.xml
<CustomObject>
    <label>Sales Period</label>
    <nameField>
        <label>Sales Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>