unpackaged/main/default/objects/Sales_Period__c/fields/Next_Sales_Period__c.field-meta.xml
<CustomField>
    <fullName>Next_Sales_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the next sales period to start after current sales period end</description>
    <inlineHelpText>Denotes the next sales period to start after current sales period end</inlineHelpText>
    <label>Next Sales Period</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Period__c.Period_Start__c</field>
            <operation>greaterThan</operation>
            <valueField>$Source.Period_End__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Period__c</referenceTo>
    <relationshipLabel>Sales Periods</relationshipLabel>
    <relationshipName>Sales_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>