unpackaged/main/default/objects/Sales_Period__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <description>Denotes datetime when sales period ends</description>
    <inlineHelpText>Denotes datetime when sales period ends</inlineHelpText>
    <label>Period End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>