unpackaged/main/default/objects/Sales_Period__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>Denotes datetime when sales period starts</description>
    <inlineHelpText>Denotes datetime when sales period starts</inlineHelpText>
    <label>Period Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>