unpackaged/main/default/objects/Sales_Period__c/fields/Sales_Period_Month__c.field-meta.xml
<CustomField>
    <fullName>Sales_Period_Month__c</fullName>
    <description>Denotes first day of month when sales period start</description>
    <inlineHelpText>Denotes first day of month when sales period start</inlineHelpText>
    <label>Sales Period Month</label>
    <type>Date</type>
</CustomField>