unpackaged/main/default/objects/Sales_Period__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Denotes the status of sales period</description>
    <inlineHelpText>Denotes the status of sales period</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Future</fullName>
                <default>true</default>
                <label>Future</label>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>