unpackaged/main/default/objects/Sales_Period__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the PG subsidiary to which the sales period belongs to</description>
    <inlineHelpText>Denotes the PG subsidiary to which the sales period belongs to</inlineHelpText>
    <label>Subsidiary</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Sales Periods</relationshipLabel>
    <relationshipName>Sales_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>