unpackaged/main/default/objects/Sales_Period__c/validationRules/Check_sales_period_overlap.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_sales_period_overlap</fullName>
    <active>true</active>
    <errorConditionFormula>IF( !ISBLANK(Next_Sales_Period__c),  Next_Sales_Period__r.Period_Start__c &lt;  Period_End__c, FALSE )</errorConditionFormula>
    <errorMessage>Next sales period should not overlap with current sales period</errorMessage>
</ValidationRule>