unpackaged/main/default/objects/Sales_Period__c/validationRules/Check_sales_period_subsidiary.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_sales_period_subsidiary</fullName>
    <active>true</active>
    <description>Validate if subsidiary matches with next sales period&#39;s subsidiary</description>
    <errorConditionFormula>IF( !ISBLANK(Next_Sales_Period__r.Subsidiary__c), Subsidiary__c !=  Next_Sales_Period__r.Subsidiary__c, FALSE)</errorConditionFormula>
    <errorMessage>Subsidiary of next sales period doesn&#39;t match with current subsidiary</errorMessage>
</ValidationRule>