unpackaged/main/default/objects/Sales_Period__c/validationRules/Validate_start_and_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_start_and_end_date</fullName>
    <active>true</active>
    <description>Check if end date is always greater than the start date</description>
    <errorConditionFormula>Period_Start__c &gt;  Period_End__c</errorConditionFormula>
    <errorMessage>Start date should be always be lesser than the end date</errorMessage>
</ValidationRule>