unpackaged/main/default/objects/Sales_Period__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sales_Period_Month__c</columns>
    <columns>Period_Start__c</columns>
    <columns>Period_End__c</columns>
    <columns>Next_Sales_Period__c</columns>
    <columns>Subsidiary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>